--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -1,9 +1,9 @@
-FROM centos:7
+FROM centos/devtoolset-4-toolchain-centos7
+MAINTAINER Ben Shealy <btsheal@clemson.edu>
 
 # install package dependencies
-RUN yum install centos-release-scl
-   && yum install devtoolset-4 mesa-libGL-devel
-   && scl enable devtoolset-4 bash
+USER 0
+RUN yum install -y make mesa-libGL-devel wget
 
 # install Qt
 RUN cd /opt \
