--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -1,4 +1,5 @@
-FROM ubuntu:xenial
+FROM nvidia/cuda:9.0-devel
+MAINTAINER Ben Shealy <btsheal@clemson.edu>
 
 # install package dependencies
 RUN apt-get update \
