--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -5,7 +5,11 @@ MAINTAINER Ben Shealy <btsheal@clemson.edu>
 RUN apt-get update \
    && apt-get install -y wget xz-utils \
    && apt-get install -y build-essential python gperf bison flex pkg-config libgl1-mesa-dev \
-   && apt-get install -y git libgsl-dev libopenblas-dev libopenmpi-dev ocl-icd-opencl-dev
+   && apt-get install -y clinfo git libgsl-dev libopenblas-dev libopenmpi-dev ocl-icd-opencl-dev
+
+# add NVIDIA platform to OpenCL
+RUN mkdir -p /etc/OpenCL/vendors \
+   && echo "libnvidia-opencl.so.1" > /etc/OpenCL/vendors/nvidia.icd
 
 # install Qt
 RUN cd /opt \
@@ -28,7 +32,6 @@ RUN cd /opt \
    && cd ACE/build \
    && git checkout develop \
    && qmake ../src/ACE.pro PREFIX=/opt/ace \
-   && make qmake_all \
    && make -j 20 \
    && make qmake_all \
    && make install
@@ -45,7 +48,6 @@ RUN cd /opt \
    && cd KINC/build \
    && git checkout develop \
    && qmake ../src/KINC.pro PREFIX=/opt/kinc \
-   && make qmake_all \
    && make -j 20 \
    && make qmake_all \
    && make install
