Added basic Docker integration to nextflow scripts

--- a/KINC/Dockerfile
+++ b/KINC/Dockerfile
@@ -2,10 +2,10 @@ FROM nvidia/cuda:9.0-devel
 MAINTAINER Ben Shealy <btsheal@clemson.edu>
 
 # install package dependencies
-RUN apt-get update \
-	&& apt-get install -y wget xz-utils \
-	&& apt-get install -y build-essential python gperf bison flex pkg-config libgl1-mesa-dev \
-	&& apt-get install -y clinfo git libgsl-dev libopenblas-dev libopenmpi-dev ocl-icd-opencl-dev telnet
+RUN apt-get update -qq \
+	&& apt-get install -qq -y wget xz-utils \
+	&& apt-get install -qq -y build-essential python gperf bison flex pkg-config libgl1-mesa-dev \
+	&& apt-get install -qq -y clinfo git libgsl-dev liblapacke-dev libopenblas-dev libopenmpi-dev ocl-icd-opencl-dev
 
 # add NVIDIA platform to OpenCL
 RUN mkdir -p /etc/OpenCL/vendors \
@@ -19,8 +19,8 @@ RUN cd /opt \
 	&& mkdir qt \
 	&& cd qt \
 	&& ../qt-everywhere-src-5.11.1/configure -prefix . -opensource -confirm-license \
-	&& make -j 20 \
-	&& make -j 20 install \
+	&& make -s -j $(nproc) \
+	&& make -s -j $(nproc) install \
 	&& rm -rf ../qt-everywhere-src-5.11.1
 
 ENV QTDIR  "/opt/qt"
@@ -32,9 +32,9 @@ RUN cd /opt \
 	&& cd ACE/build \
 	&& git checkout v3.0.2 \
 	&& qmake ../src/ACE.pro PREFIX=/opt/ace \
-	&& make -j 20 \
-	&& make qmake_all \
-	&& make install
+	&& make -s -j $(nproc) \
+	&& make -s qmake_all \
+	&& make -s install
 
 ENV ACEDIR              "/opt/ace"
 ENV PATH                "$ACEDIR/bin:$PATH"
@@ -48,9 +48,9 @@ RUN cd /opt \
 	&& cd KINC/build \
 	&& git checkout v3.2.2 \
 	&& qmake ../src/KINC.pro PREFIX=/opt/kinc \
-	&& make -j 20 \
-	&& make qmake_all \
-	&& make install
+	&& make -s -j $(nproc) \
+	&& make -s qmake_all \
+	&& make -s install
 
 ENV KINCDIR  "/opt/kinc"
 ENV PATH     "$KINCDIR/bin:$PATH"
