--- a/KINC/nextflow.config
+++ b/KINC/nextflow.config
@@ -5,6 +5,7 @@ manifest {
 }
 
 params {
+	input_dir = "${PWD}/data"
 	dataset = "${PWD}/data/Yeast.txt"
 	chunks = 10
 	clus_method = "none"
@@ -41,7 +42,15 @@ trace {
 
 
 
+docker {
+	sudo = true
+	runOptions = "--runtime=nvidia --mount type=bind,src=${params.input_dir},dst=${params.input_dir},readonly --mount type=bind,src=${params.output_dir},dst=${params.output_dir}"
+}
+
+
+
 process {
+	container = "bentsherman/kinc:latest"
 	errorStrategy = { "${task.attempt}" <= "${params.execution.max_retries}" ? "retry" : "${params.execution.error_strategy}" }
 	maxRetries = "${params.execution.max_retries}"
 	// maxErrors = 1000
