Added switches to KINC pipeline script

--- a/KINC/nextflow.config
+++ b/KINC/nextflow.config
@@ -12,6 +12,11 @@ params {
 	corr_method = "pearson"
 	output_dir = "${PWD}/output"
 
+	run_import_emx = true
+	run_similarity = true
+	run_threshold = true
+	run_extract = true
+
 	execution {
 		queue_size = 100
 		threads = 1
